--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,7 +1,6 @@
-h1 {
+.title {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 40px;
-    color: #3A4042;
+    color: #fff;
     text-shadow: 4px 4px 0px #000;
-    margin-bottom: 29px;
 }
